bugfix: fix provider and models related bugs and update config / backend / model / api / frontend logic around them. (#77)
- Major: bugfix in provider process
- Minor: 
  - feat: new model manager using provider uuid
  - feat: new api for provider model list
  - refactor: optimize some pages and components
