# swagger.json
@@ -189,7 +189,7 @@
         }
       }
     },
-    "/api/v1/provider-models": {
+    "/api/v1/provider-models/{uuid}": {
       "get": {
         "tags": [
           "models"
@@ -202,6 +202,16 @@
         "produces": [
           "application/json"
         ],
+        "parameters": [
+          {
+            "name": "uuid",
+            "in": "path",
+            "description": "Unique identifier (UUID)",
+            "required": true,
+            "type": "string",
+            "format": "uuid"
+          }
+        ],
         "responses": {
           "200": {
             "description": "Successful response",
@@ -210,9 +220,7 @@
             }
           }
         }
-      }
-    },
-    "/api/v1/provider-models/{name}": {
+      },
       "post": {
         "tags": [
           "models"
@@ -227,18 +235,19 @@
         ],
         "parameters": [
           {
-            "name": "name",
+            "name": "uuid",
             "in": "path",
-            "description": "Resource name",
+            "description": "Unique identifier (UUID)",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "format": "uuid"
           }
         ],
         "responses": {
           "200": {
             "description": "Successful response",
             "schema": {
-              "$ref": "#/definitions/FetchProviderModelsResponse"
+              "$ref": "#/definitions/ProviderModelsResponse"
             }
           }
         }
@@ -869,30 +878,6 @@
         "type"
       ]
     },
-    "FetchProviderModelsResponse": {
-      "type": "object",
-      "properties": {
-        "data": {
-          "type": "object",
-          "description": "Field data"
-        },
-        "message": {
-          "type": "string",
-          "description": "Field message",
-          "example": "Successfully fetched 150 models for provider openai"
-        },
-        "success": {
-          "type": "boolean",
-          "description": "Field success",
-          "example": true
-        }
-      },
-      "required": [
-        "success",
-        "message",
-        "data"
-      ]
-    },
     "GenerateTokenRequest": {
       "type": "object",
       "properties": {
@@ -1280,11 +1265,13 @@
       "type": "object",
       "properties": {
         "data": {
-          "type": "object",
           "description": "Field data",
-          "additionalProperties": {
-            "$ref": "#/definitions/ProviderModelInfo"
-          }
+          "$ref": "#/definitions/ProviderModelInfo"
+        },
+        "message": {
+          "type": "string",
+          "description": "Field message",
+          "example": "Provider models successfully"
         },
         "success": {
           "type": "boolean",
@@ -1294,6 +1281,7 @@
       },
       "required": [
         "success",
+        "message",
         "data"
       ]
     },
@@ -1807,18 +1795,6 @@
   },
   "tags": [
     {
-      "name": "server",
-      "description": "Operations related to server"
-    },
-    {
-      "name": "rules",
-      "description": "Operations related to rules"
-    },
-    {
-      "name": "history",
-      "description": "Operations related to history"
-    },
-    {
       "name": "models",
       "description": "Operations related to models"
     },
@@ -1827,16 +1803,28 @@
       "description": "Operations related to testing"
     },
     {
-      "name": "providers",
-      "description": "Operations related to providers"
-    },
-    {
       "name": "token",
       "description": "Operations related to token"
     },
     {
+      "name": "providers",
+      "description": "Operations related to providers"
+    },
+    {
+      "name": "server",
+      "description": "Operations related to server"
+    },
+    {
       "name": "api",
       "description": "Operations related to api"
+    },
+    {
+      "name": "rules",
+      "description": "Operations related to rules"
+    },
+    {
+      "name": "history",
+      "description": "Operations related to history"
     }
   ]
 }
